# haskellTesting

./: README.md  haskellTesting.cabal
src/: Lib.hs
test/: Spec.hs
