name:                haskellTesting
version:             0.1.0.0
synopsis:            Learning about testing in Haskell
description:         Working through chapter 14 of the glorious Haskell Book on testing in Haskell.
homepage:            https://github.com/NewMountain/haskellTesting
license:             BSD3
license-file:        LICENSE
author:              Christopher Nyberg
maintainer:          https://github.com/NewMountain
copyright:           2017 Christopher Nyberg
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , ghc-mod
                     , hindent
                     , hlint
  default-language:    Haskell2010

executable haskellTesting
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellTesting
  default-language:    Haskell2010

test-suite haskellTesting-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellTesting
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NewMountain/haskellTesting
